--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  url_launcher: ^5.7.0
+  firebase_auth: ^0.14.0
+  cloud_firestore: ^0.13.5
+  firebase_core_web: ^0.1.1
+  http: ^0.12.0
+  provider: ^4.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
